--- a/packages/remirror__styles/all.css
+++ b/packages/remirror__styles/all.css
@@ -3562,6 +3562,10 @@ button:active .remirror-menu-pane-shortcut,
   vertical-align: top;
   box-sizing: border-box;
   position: relative;
+  border: solid 1px var(--rmr-color-divider);
+}
+.remirror-editor.ProseMirror th {
+  background-color: var(--rmr-color-shadow-1);
 }
 .remirror-editor.ProseMirror .column-resize-handle {
   position: absolute;
@@ -3573,7 +3577,7 @@ button:active .remirror-menu-pane-shortcut,
   background-color: var(--rmr-hue-blue-9);
   pointer-events: none;
 }
-.remirror-editor.ProseMirror .resize-cursor {
+.remirror-editor.ProseMirror.resize-cursor {
   cursor: ew-resize;
   cursor: col-resize;
 }
@@ -3724,6 +3728,7 @@ button:active .remirror-menu-pane-shortcut,
   --rmr-color-shadow-3: rgba(10, 31, 68, 0.12);
   --rmr-color-backdrop: rgba(0, 0, 0, 0.9);
   --rmr-color-outline: rgba(121, 99, 210, 0.4);
+  --rmr-color-divider: hsla(0, 0%, 80%, 1);
   --rmr-color-selection-background: Highlight;
   --rmr-color-selection-shadow: inherit;
   --rmr-color-selection-text: HighlightText;
